# pfstrase

./: .gitignore  README.md  deploy_lustre.sh~
client/: AUTHORS  Makefile.am  build_and_deploy.sh  collect.c  configure.ac  cpu.c  cpuid.c  daemonize.c  exports.c  hostlist.py  ib_sw.c  ib_sw.h  intel_pmc3.c  intel_pmc3.h  intel_skx_imc.c  intel_skx_imc.h  lfs_utils.c  lfs_utils.h  llite.h  osc.c  osc.h  pci.c  pfstrase.conf  pfstrase.spec  pfstrase_client.c  pfstrase_initd.sh  pfstrase_initd.spec  pidfile_create.h  slurm_tagging  socket_client.c  socket_client.h  source.sh  target.h
collect/: .#stats.c  .gitignore  Makefile.am  a.out  amqp_listen.c  amqp_socket_utils.c  amqp_socket_utils.h  build_and_deploy.sh  collect.c  collect.h  configure.ac  cpu.h  daemonize.c  dict.c  dict.h  exports.c  exports.h  lfs_utils.c  lfs_utils.h  llite.c  llite.h  lod.c  lod.h  map_server  map_server.c  n_buf.c  osc.c  osc.h  pfstrase.conf  pfstrase.service  pfstrase.spec  pfstrase_client  pfstrase_client.c  pfstrase_initd.sh  pfstrase_initd.spec  pfstrase_server  pfstrase_server.c  pidfile_create.c  qhost.py  screen.c  (+14 more)
deploy/: .gitignore  README  attach_volumes.py  basic_services.yaml  clean.py  dateortime.py  deploy_lustre.sh  deploy_server.py  deploy_servers.py  deploy_vm.sh  deploy_vms.py  deploy_volumes.py  destroy_server.py  destroy_servers.py  destroy_volumes.py  detach_volumes.py  get_ip.py  get_ip.sh  init_keypair.sh  init_master.sh  init_server.sh  init_vm.sh  install_pfstrase.yaml  lustre.cfg  openrc  redeploy_server.sh  reload_pfstrase.sh  reload_pfstrase.yaml  remount_fs.html  remove_authkey_limitation.sh  remove_pfstrase.yaml  spawn_real_time_child.py  start_pfstrase.sh  stop_pfstrase.sh  update_inventory.py  utils.py
deploy/ansible/: cluster.yaml
deploy/ansible/client/tasks/: main.yaml
deploy/ansible/common/tasks/: main.yaml
deploy/ansible/config/group_vars/oss/: partitions.yaml
deploy/ansible/filesync/tasks/: main.yaml
deploy/ansible/host_vars/mds0/: lconf.yaml  partitions.yaml
deploy/ansible/host_vars/oss0/: partitions.yaml
deploy/ansible/host_vars/oss1/: partitions.yaml
deploy/ansible/lclient/tasks/: main.yaml
deploy/ansible/partition/tasks/: .main.yaml.swp  main.yaml
deploy/ansible/server/tasks/: main.yaml
deploy/ansible/zpool/tasks/: main.yaml
iogen/: run_ior.yaml  setjid.sh  start_io.yaml  stop_io.yaml
server/: .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  daemonize.c  hosts  map_nids.py  pfsql  pfsql.c  pfsql.conf  pfstrase.conf  pfstrase_server  pfstrase_server.c  pfstrase_server.conf  pfstrase_server.service  pfstrase_server.spec  pq.c  pq.h  qhost.py  screen.c  screen.h  shmmap.c  shmmap.h  socket_server.c  socket_server.h  stats.c  stats.h  stockyard_nids  wrangler_nids
server/.deps/: pfstrase_server-daemonize.Po  pfstrase_server-pfstrase_server.Po  pfstrase_server-pq.Po  pfstrase_server-screen.Po  pfstrase_server-socket_server.Po  pfstrase_server-stats.Po
server/autom4te.cache/: output.1  requests  traces.0  traces.1
server/nids/: frontera-nids  ls5-nids  s2-nids  stockyard-nids
site/: README  insert.py  manage.py  query_db.py  update_db.py
site/pfs_app/: models.py  update_db.py  views.py  views.py.bak
site/pfs_app/migrations/: 0001_initial.py  0002_auto_20190405_2048.py  0002_auto_20191122_1411.py  0002_stats_fid.py  0003_auto_20190405_2056.py  0003_auto_20191122_1619.py  0003_auto_20210212_1406.py  0004_auto_20190405_2106.py  0004_auto_20191203_1537.py  0005_auto_20190410_1552.py  0005_auto_20191203_1541.py  0006_auto_20190410_1618.py  0006_obdfilter_punch.py  0007_auto_20190410_1816.py  0008_auto_20190410_1919.py  0009_auto_20190415_1852.py  0010_hosts_obdclass.py
site/pfs_app/templates/pfs_app/: form.html  history.html  home.html  tag_detail.html
site/pfstrase/: settings.py  urls.py  wsgi.py
site/pfstrase/templates/pfstrase/: base.html
